added error handling

--- a/mini_search_engnine/mainapp/templates/herosection.html
+++ b/mini_search_engnine/mainapp/templates/herosection.html
@@ -13,12 +13,12 @@
     </p>
     <div class="mt-8 flex max-sm:flex-col sm:space-x-4 max-sm:space-y-6">
       <a
-        href="javascript:void(0);"
+        href="#search-section"
         class="px-6 py-3 text-base font-semibold text-white bg-[#f032e6] rounded-full hover:bg-opacity-80 transition-all duration-300 transform hover:scale-105 focus:ring-2 focus:ring-[#f032e6] focus:outline-none focus:ring-opacity-50"
         >Explore</a
       >
       <a
-        href="javascript:void(0);"
+        href="{% url "about_us" %}"
         class="px-6 py-3 text-base font-semibold text-[#f032e6] border border-[#f032e6] rounded-full hover:text-white hover:bg-[#f032e6] transition-all duration-300 transform hover:scale-105 focus:ring-2 focus:ring-[#f032e6] focus:outline-none focus:ring-opacity-50"
         >Meet Our Team</a
       >
